--- a/actividad-biografia/styles.css
+++ b/actividad-biografia/styles.css
@@ -33,12 +33,11 @@ body{
     margin-top: 25px;
     font-size: 22px;
     border: 1px solid #373a3c;
-    margin-left: 50px;
     display: table;
-    padding: 7px;
+    padding: 10px;
     align-items: center;
     justify-content: center;
-    margin-left: 45%;
+    margin-left: 43%;
 }
 
 .links {
@@ -51,7 +50,7 @@ body{
     font-size: 18px;
 }
 
-.comienzos-banda {
+.secciones {
     margin-top: 30px;
     
 }
