--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -18,3 +18,19 @@ header p {
     font-size: 20px;
     margin-top: 40px;
 }
+
+.titulos{
+    font-size: 50px;
+    margin-top: 20px;
+}
+
+.contenedor-footer{
+    background-color: black;
+    padding: 30px;
+}
+
+.info-box{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
